--- a/pushing_outshoot_unfold/days2/17.toml
+++ b/pushing_outshoot_unfold/days2/17.toml
@@ -1,6 +1,6 @@
-year = 2020-2021
-month = 12-1
-date = 31-1
+year = 2020#-2021
+month = 12#-1
+date = 31#-1
 
 story = """
 New Years approaches and you are glad that 2020 is ending. You hope that 2021 will be amazing and that restrictions will lighten up. 
