--- a/sailboat.toml
+++ b/sailboat.toml
@@ -13,9 +13,9 @@ description = ""
 url = "https://github.com/po-unfold"
 keywords = ""
 license = "none"
-latest_build = "0.0.4"
-release-notes = "Added days, and ASCII, and a whole bunch of other stuff"
-latest_release = "0.0.3"
+latest_build = "0.0.5"
+release-notes = "fix: Unicode UTF-8 bug with encoding."
+latest_release = "0.0.4"
 
 
 # Resource Setup:
