--- a/.github/workflows/sailboat.yml
+++ b/.github/workflows/sailboat.yml
@@ -39,7 +39,7 @@ jobs:
         python-version: '3.x'
     - name: Install Dependencies and Build
       run: |
-        pip install sailboat blessed toml
+        pip install sailboat blessed toml logging
         python -m sailboat.__main__ build + ${{ matrix.builds }}
         
     - name: Check for prerelease
