--- a/sailboat.toml
+++ b/sailboat.toml
@@ -13,9 +13,9 @@ description = ""
 url = "https://github.com/po-unfold"
 keywords = ""
 license = "none"
-latest_build = "0.1.0"
-release-notes = "Added sound and banner!"
-latest_release = "0.0.8"
+latest_build = "0.1.1"
+release-notes = "new: Icons, Music, Calendar, Math, Story, Notifications, lots more!!!"
+latest_release = "0.1.0"
 
 
 # Resource Setup:
@@ -23,9 +23,9 @@ latest_release = "0.0.8"
 icns = "icon.icns"
 ico = "icon.ico"
 data_files = [ "sounds/*", "days/*.toml", "days2/*.toml", "days3/*.toml",]
-modules = [ "blessed", "toml", "simpleaudio", "replit",]
+modules = [ "blessed", "toml", "replit",]
 file = "main.py"
-no_import = [ "glob", "os", "logging", "pushing_outfold_unfold", "", "textwrap", "threading", "random", "calendar as cal",]
+no_import = [ "glob", "os", "logging", "simpleaudio", "pushing_outfold_unfold", "", "textwrap", "threading", "random", "calendar as cal",]
 
 
 # Plugin Commands:
