--- a/pushing_outshoot_unfold/days3/20.toml
+++ b/pushing_outshoot_unfold/days3/20.toml
@@ -10,7 +10,9 @@ However, it was very shocking to hear about the winter storm in Texas. Most hous
 
 Lately, you’ve been starting to exercise more and are considering joining some school sports when schools open back up! Maybe you should join the soccer team, or volleyball, or tennis! The thought of going back to school really brightened up your day.
 But, you still need to do homework.Today you have to do math, science, and english, and some P.E.
-(Interactive Part)
+
+(INTERACTIVE PARTS math,eng,sci)
+
 You are finally done with your homework! 
 F: Hey have you heard about the new schedule?!?!?
 Y: Wait, there's a new schedule??Another schedule?
