--- a/pushing_outshoot_unfold/days/5.toml
+++ b/pushing_outshoot_unfold/days/5.toml
@@ -2,12 +2,18 @@ year = 2020
 month = 5
 date = 25
 
+
 story = """
 You hear on the news today that an African American man named George Floyd had passed away due to police violence. There were other violent acts against African Americans before this event, however. You hear about protests and riots about the event that happened. It makes you feel uncomfortable and you feel sad about what happened. But, you did see the posts about this event that your friends had put on their social media. 
 
+(INTERACTIVE PART)
+
 Algebra: The homework was pretty easy, and you feel accomplished with yourself. You feel like you’re getting better at managing your time wisely. 
+
+
 Cook Dinner: While chopping veggies, 
 Take a walk with/without the dog: It was nice to get some fresh air for once, and the weather was nice and sunny. It was uncomfortable to wear the mask though.
+
 Text a friend-
 You: Hey, what have you been up to????
 F: Just watching a lot of Netflix and Hulu
@@ -21,4 +27,6 @@ Y: (two options) “awesome” or “ I mean who hasn’t, right?
 	Y: (user can input an answer)
 	F: That’s a great idea, thanks!
 	Y: Np!
-That was your first socialization with others outside your house in a while, and you get a ping of happiness. A smile starts to form on your face. You realize that connecting with others can help you with your struggles. """
+
+That was your first socialization with others outside your house in a while, and you get a ping of happiness. A smile starts to form on your face. You realize that connecting with others can help you with your struggles.
+"""
