--- a/pushing_outshoot_unfold/days/7.toml
+++ b/pushing_outshoot_unfold/days/7.toml
@@ -10,11 +10,8 @@ Zoom meetings have been fine for you. Some of your teachers stopped doing zoom m
 And instead of being stuck in your house all day doing homework, you occasionally go outside to your backyard for some fresh air. After finishing your homework, you decide to spend time with your little sister. 
 (Interactive part: user does homework and plays with little sister. )
 Playing with little sister:
-You close your eyes and count to 20 while your little sister hides. Once you get to 20 you yell out “ready or not, here I come!”
-Where do you look first: behind the bush (wrong answer), next to the steps of your porch (wrong answer), right side of the garden (correct).
-Round 2: left side of the garden (wrong), behind the bush (right), behind the chicken coop (wrong).
 
-Round 3: next to the stepf of your porch (wrong), behind the chicken coop (right), behind the bush (wrong),
+# day7()
 
 This was really fun for you. You realize that you should play more with your sister. This has made you really happy. You found a way to cope with the stress you’ve had with school.
 """
