--- a/pushing_outshoot_unfold/days2/15.toml
+++ b/pushing_outshoot_unfold/days2/15.toml
@@ -8,9 +8,7 @@ Ahhhhh, the first final exams are coming up this month! You spend most of your t
 You’ve never had a finals before, so you’re pretty nervous for what's to come. You teachers assure you that finals will be slightly easier this year, since you can’t take the tests in person. Still, you’re just going to study so you’ll be prepared. 
 
 People in your zoom classes are turning on their cameras less and less. Breakout rooms are as awkward and uncomfortable as normal. Sometimes, when you try to get a conversation started, no one talks or answers, which makes things even more awkward. 
-Anyway, time to study! (Interactive part)
+Anyway, time to study! 
 
-It’s time to take care of your sister. She needs to get some homework done. Which will you do first? English or Math
-English: You and your sister read a book together and you ask her to write/tell you a summary of it. Then, you guys work on some of her spelling words together.
-
-Math: Your sister struggles a little bit with math, so it takes a bit longer for her to finish her math homework. You occasionally get to some math problems that you struggle to explain to your little sister if she is confused."""
+# day15()
+"""
