--- a/pushing_outshoot_unfold/days2/17.toml
+++ b/pushing_outshoot_unfold/days2/17.toml
@@ -6,5 +6,6 @@ story = """
 New Years approaches and you are glad that 2020 is ending. You hope that 2021 will be amazing and that restrictions will lighten up. 
 
 On the news and social media, you hear about some incidents that make you very angry. You hear that some influencers are throwing New Years parties despite Covid guidelines. You also notice how the people at those parties aren’t wearing masks or social distancing at all. Those parties were very crowded with many people. 
+# day17()
 
 You feel annoyed that those people are risking the lives of others by throwing these parties. Especially when most people aren’t even able to see their family at all, and others have experienced loved ones dying from catching the virus."""
