Finished for the day. Cleaned up interactions and we now have a working game playable thru the end.

--- a/pushing_outshoot_unfold/days/0.toml
+++ b/pushing_outshoot_unfold/days/0.toml
@@ -11,9 +11,11 @@ Everyone sitting on the edge of their seat, waiting... anticipating....
 
 You hear the principal say:
 
+# italic()
 		"Due to the current conditions,
 		we will unfortunately be 
 		resuming classes remotely."
+# normal()
 # pause()
 
 These were the words said on March 13th of 2020, school year of 2020-2021.
