[prerelease] backup monday's work

--- a/pushing_outshoot_unfold/days/1.toml
+++ b/pushing_outshoot_unfold/days/1.toml
@@ -1,12 +1,31 @@
 year = 2020
 month = 3
 date = 14
+goto = 2
 
 story = '''
-8:15 AM: Your alarm clock rings. It’s 8:15 a.m. Today is the first day of quarantine. You get out of bed, brush your teeth, and have some breakfast. Bacon and eggs. The usual. You contemplate whether or not to make your bed and change out of your pajamas. Meh, it’s fine, you think. 
-You sit at your desk and open up Zoom on your computer. You only have 7 minutes before class starts. You sign into zoom and enter your zoom code. After being accepted into the waiting room, you see a black screen that says “connecting” in white letters. Wait, something went wrong. You got kicked out of the meeting! You ask yourself: Why? What’s wrong? . You try to rejoin again and again, but the same thing keeps happening. 
-
+8:15 AM: Your alarm clock rings. It’s 8:15 a.m. 
+# green()
+Today is the first day of quarantine. 
+# normal()
+You get out of bed, brush your teeth, and have some breakfast. Bacon and eggs.
+The usual. 
+# pause()
+You contemplate whether or not to make your bed and change out of your pajamas. Meh, it’s fine, you think. 
+# pause()
+# green()
+You only have 7 minutes before class starts.
+# normal()
+You sign into zoom and are accepted into the waiting room. You see a black screen that says “connecting” in white letters. 
+# normal()
+# pause()
+# green()
+Wait, something went wrong. You got kicked out of the meeting! 
+# normal()
+# pause()
+# green()
+You try to rejoin again and again, but the same thing keeps happening. 
+# normal()
+# pause()
 # day1()
 '''
-
-
