--- a/pushing_outshoot_unfold/days2/13.toml
+++ b/pushing_outshoot_unfold/days2/13.toml
@@ -1,17 +1,26 @@
-
 year = 2020
 month = 10
 date = 31
+goto = 14
 
 
 
 story = """
-Today is Halloween, and it was stated that people should stay home for the holiday for the safety of others. Huh, another holiday was cancelled. You feel really disappointed, but you decide to try to make the best of things during this pandemic. 
-
+# green()
+Today is Halloween, and it was stated that people should stay home for the holiday for the safety of others. 
+# normal()
+Huh, another holiday cancelled. You decide to try to make the best of things during this pandemic. 
+# pause()
+# green()
 Your idea is to create a costume from materials you have at your house. You decide to make this a competition to see who makes the best costume among your friends. 
-
+# normal()
+# pause()
 # day13()
-
-Overall, it was so fun. You were supposed to be eating halloween candy too, but the package that you mom ordered hadn’t arrived yet. The wait time for packages/mail has been so long because of the pandemic. However, your dad saved the day by making homemade caramel popcorn!
+# pause()
+Overall, it was so fun. You were supposed to be eating halloween candy too, but the package that you mom ordered hadn’t arrived yet. 
+# pause()
+The wait time for packages/mail has been so long because of the pandemic.
+# pause()
+However, your dad saved the day by making homemade caramel popcorn!
 """
 
