--- a/pushing_outshoot_unfold/days/3.toml
+++ b/pushing_outshoot_unfold/days/3.toml
@@ -1,16 +1,37 @@
 year = 2020
 month = 4
 date = 21
+goto = 4
 
 
 story = """
-It is Tuesday morning. 8:15 a.m. You had just joined in your first zoom meeting, and your teacher is going over the school announcements. Your teacher moves on from slide to slide. You go from talking about grades, to keeping up with homework, to sources to help people reach out to teachers. But then, something catches your eye. Right when your teacher clicks onto the last and final slide, you read the words “Schools have decided to keep remote learning for the rest of the year.”
-
-Your teacher reads it outloud. You sit there in disbelief. It’s not like you didn’t see it coming though, but you still had that small part in the back of your head hoping that you could go back to school. You missed seeing your friends and easily being able to ask your teacher questions if you were confused. Now you were going to miss graduating 8th grade and going on the 8th grade trip to Wild Waves. You start to feel upset, and from that point on, the idea of all the cancellations cloud your mind. 
-
-Today you have homework from 4 of your classes and you also have some homework to finish from yesterday. You need to get them done before 6:00 p.m when they are due. You have 2 homework assignments from science, 1 from english, and 1 from algebra. It is currently 4:00 p.m. You realized that you should have finished yesterday's homework when you first got it and you underestimated how easy remote learning was going to be. You decide to start immediately. 
-
-You decide to do your algebra homework first, then your english, and then your science.
-
+# green()
+Tuesday morning. 8:15 a.m. You just joined your first zoom meeting. 
+# normal()
+Your teacher is going over the school announcements.You go from talking about grades, to keeping up with homework, to sources to help people reach out to teachers. But then, something catches your eye. Right when your teacher clicks onto the last and final slide, you read the words: 
+# pause()
+# bold()
+# green()
+				“Schools have decided to keep remote learning for the rest of the year. Cancelling events. . .”
+# normal()
+# pause()
+Your teacher reads it outloud. 
+# green()
+You sit there in disbelief. 
+# normal()
+It’s not like you didn’t see it coming though,but you still had that small part in the back of your head hoping that you could go back to school. 
+# green()
+You start to feel upset, and from that point on, the idea of all the cancellations cloud your mind.
+# normal()
+# pause()
+# green()
+Today you have homework from 4 of your classes and you also have some homework to finish from yesterday. 
+# normal()
+You need to get them done before 6:00 p.m when they are due. It is currently 4:00 p.m. You realized that you underestimated how easy remote learning was going to be. 
+# pause()
+# green()
+You decide to do your homework. You need to do algebra, english, and science.
+# normal()
+# pause()
 # day3()
 """
