--- a/pushing_outshoot_unfold/days/8.toml
+++ b/pushing_outshoot_unfold/days/8.toml
@@ -1,14 +1,23 @@
 year = 2020
 month = 6
 date = 22
+goto = 9
 
 story = """
-It’s the last day of school! Today you’re supposed to go drop off your textbooks at your middle school. Your middle school is doing a last meeting activity with your teachers. You teachers are at different stations and they wave to you as you drive around to each station. 
-
-One of your teachers hands you a note, while another gives you your yearbook. As you wave goodbye to your 8th grade teachers, you feel a bit sad. This wasn’t really the way you wanted this year to end, but this is what is needed to keep everyone safe. 
-
-You start to flip through your yearbook in the car. First you look through the table to contents. It must be upsetting for the fifth graders to end their year this way too, you think to yourself. You can relate to them. Your mind focuses back onto your yearbook.
-
+It’s the last day of school! 
+# green()
+Today you’re supposed to go drop off your textbooks at your middle school. Your middle school is doing a last meeting activity with your teachers. You teachers are at different stations and they wave to you as you drive around to each station. 
+# normal()
+# pause()
+One of your teachers hands you a note, while another gives you your yearbook. As you wave goodbye to your 8th grade teachers, you feel a bit sad. 
+# green()
+This wasn’t really the way you wanted this year to end, but this is what is needed to keep everyone safe. 
+# pause()
+You start to flip through your yearbook in the car. First you look through the table to contents. 
+# normal()
+It must be upsetting for the fifth graders to end their year this way too, you think to yourself. You can relate to them. Your mind focuses back onto your yearbook.
+# pause()
 # day8()
+# pause()
 Because you didn’t get to celebrate the end of 8th grade with your friends, your parents decided to throw you a graduation party, to give some light to the end of this year. 
 """
