--- a/pushing_outshoot_unfold/days2/10.toml
+++ b/pushing_outshoot_unfold/days2/10.toml
@@ -1,37 +1,13 @@
 year  = 2020
 month = 8
 date = 17
-
+goto = 11
 
 story = """ 
-(Randomized) Introvert: having a hard time reaching out to friends
-You’ve not been feeling yourself lately. It feels like you’re alone and isolated. You also haven’t had any social interaction outside of your family in a while. You’ve developed cabin fever. You need some way to vent out your emotions, but you don’t know how. You decide to search online about strategies you can use. One thing that caught your eye was journaling. You decide to give it a try. (NEED HELP WITH THIS PART)
+# day 10()
 
-Extrovert: talk to friends about the struggles of adjusting to quarantine. 
-Y: Hi, do you have time to talk?
-F: Yup, I have time to talk 90% of the time.
-Y: How have you been doing in quarantine? I think I’m starting to get cabin fever.
-F: Me too, I really hope that we can see each other in person soon.
-Y: Yeah, it's hard to not be able to meet up with friends. I feel trapped. 
-F: I totally understand. 
-(Do you want to continue the conversation? If so: talk about what's going on what other families or upcoming freshman year)
-If option 1:
-F: Quarantine has really taken a toll on people.
-Y: Yeah, many people are losing their jobs or are being laid off. 
-F: And a lot of those people have family to support or they are trying their best to get well off. 
-Y: Yes, and small businesses too. 
-F: Exactly, once restrictions lighten up and we are supposed to be home 24/7, then we should totally visit some small businesses and support them!
-Y: That sounds great, I’m looking forward to it.
-Y: Thanks for talking to me, it really helped.
-F: No problem, let's talk again tomorrow. It really helped me get some social interaction.
-If option 2: 
-Y: Are you excited to be a freshman in high school?
-F: Super excited, but it’s not going to be the same experience as being in person.
-Y: Yeah, we have to miss out on Homecoming. I was really looking forward to it.
-F: It’s also our first year of high school, so it's kinda upsetting that we can’t have the full experience. Classes are going to be so different. 
-
+"""
 [[notification]]
 title = "Text Notification"
 text = "Fires in California."
 date = "Auguest 17th ,2020"
-"""
