--- a/pushing_outshoot_unfold/days2/16.toml
+++ b/pushing_outshoot_unfold/days2/16.toml
@@ -1,6 +1,13 @@
 year = 2020
 month = 12
 date = 14#-18
+goto = 17
 
 story = """
-The final exams are here! You are supposed to only attend 3 classes a day. Each being 1 hour long. When you receive your test scores, you breathe a sigh of relief. You did pretty well! There were some answers that you missed that made you angry with yourself. That’s because on those ones, you self doubted yourself and changed your answer. However, you now get a 2 and a half weeks break from school, woo-hoo!"""
+The final exams are here! You are supposed to only attend 3 classes a day. 
+
+You see that you did pretty well on your exams!
+
+There were some answers that you missed that made you angry with yourself. That’s because on those ones, you self doubted yourself and changed your answer. 
+
+However, you now get a 2 and a half weeks break from school, woo-hoo!"""
