--- a/pushing_outshoot_unfold/days2/18.toml
+++ b/pushing_outshoot_unfold/days2/18.toml
@@ -1,13 +1,19 @@
 year = 2021
 month = 1
 date = 13#-20 (comes before jan news)
+goto = 19
 
 story = """
 January 20th, 2021: 
- 
-2021 hadn’t started as good as you had expected too. There were many overwhelming events that happened. It was hard to comprehend everything that was happening. You felt all emotions during this month. 
- 
-On top of that, your class schedule has changed due to school learning regulations. This new schedule is kind of wonky, and you’re having a hard time getting used to it. Also, you have a lot of homework, and you’re worried that you won’t get it done in time.
+
+2021 hadn’t started as good as you had expected too. 
+# green()
+There were many overwhelming events that happened. It was hard to comprehend everything that was happening.
+# pause()
+On top of that, your class schedule has changed due to school learning regulations. 
+# normal()
+This new schedule is kind of wonky, and you’re having a hard time getting used to it. Also, you have a lot of homework, and you’re worried that you won’t get it done in time.
+# pause()
 x eng() math() sci()
 """
 [[notification]]
