--- a/pushing_outshoot_unfold/days3/19.toml
+++ b/pushing_outshoot_unfold/days3/19.toml
@@ -1,10 +1,16 @@
 year = 2021 
 month = 2
 date = 1
+goto = 345
 
 story = """
 
-It was really sad to see what was going on in Perth, Australia. You see pictures of hurt animals. Animals that are deprived of water, animals that lost their homes, and animals who didn’t make it. People also had to evacuate their homes even during the covid lockdown. Some people have nowhere to go or stay, with hotels being closed and their families also quarantine. You decide you want to do something to help the situation. 
+It was really sad to see what was going on in Perth, Australia. 
+# green()
+You see pictures of hurt animals. Animals that are deprived of water and animals that have lost their homes.
+# pause()
+People also had to evacuate their homes even during the covid lockdown. Some people have nowhere to go or stay. You decide you want to do something to help the situation. 
+# normal()
 # day19()
 """
 [[notification]]
