--- a/sailboat.toml
+++ b/sailboat.toml
@@ -13,9 +13,9 @@ description = ""
 url = "https://github.com/po-unfold"
 keywords = ""
 license = "none"
-latest_build = "0.2.3"
-release-notes = "Finally fixed random windows bug!! I hope..."
-latest_release = "0.2.2"
+latest_build = "0.2.3-dev1"
+release-notes = "Finished for the day. Cleaned up interactions and we now have a working game playable thru the end."
+latest_release = "0.2.3"
 
 
 # Resource Setup:
